test/files/neg/java-annotation-match-error.check
J.java:11: error: identifier expected but `int' found.
  int int int // check we get this syntax error
      ^
J.java:12: error: `;' expected but `}' found.
}
^
two errors found
